force-app/main/default/objects/Marketing_Plan__c.object
<CustomObject>
    <description>Final Go-To Market Predefined Or Custom Plans configured by assigning values to Plan Templates</description>
    <fields>
        <fullName>Base_Rate_Variant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Rate Variant</label>
        <referenceTo>Base_Rate_Variant__c</referenceTo>
        <relationshipName>Predefined_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discontinued_Date__c</fullName>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Value__c</fullName>
        <label>Exchange Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Component_Code__c</fullName>
        <externalId>true</externalId>
        <label>Plan Component Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Family_Name__c</fullName>
        <formula>Plan_Family__r.Name</formula>
        <label>Plan Family Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <label>Plan Family</label>
        <referenceTo>Plan_Family__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Template__c</fullName>
        <label>Plan Template</label>
        <referenceTo>Plan_Template__c</referenceTo>
        <relationshipLabel>Marketing Plans</relationshipLabel>
        <relationshipName>Marketing_Plans</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <formula>TEXT(Plan_Family__r.Line_Of_Business__c)</formula>
        <label>Plan Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workspace</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marketing Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Exchange_Value__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <columns>Plan_Component_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Marketing Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>