force-app/main/default/objects/Marketing_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exchange_Value__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <columns>Plan_Component_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>